--- a/Bank Project OOP/Bank Project OOP.vcxproj.filters
+++ b/Bank Project OOP/Bank Project OOP.vcxproj.filters
@@ -13,6 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\UserLibrary">
+      <UniqueIdentifier>{ff7d7b2a-3deb-4859-aac9-a04bc971939e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\TranscationsLibrary">
+      <UniqueIdentifier>{abdfe83c-b6de-4ba0-b03a-886835889205}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ClientLibrary">
+      <UniqueIdentifier>{b3444cb0-c4d0-4eae-80ce-d171dad0842a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ExtraLibray">
+      <UniqueIdentifier>{33562101-7dbc-4f16-8865-e17950d13fe8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\CurrencyLibrary">
+      <UniqueIdentifier>{11f57be2-c71c-4437-baa1-1b04a7aa926b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ScreensLibrary">
+      <UniqueIdentifier>{5a593c4a-e7c9-4786-a6b2-f3947ac7b356}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bank Project OOP.cpp">
@@ -20,107 +38,107 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="clsPerson.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsBankClient.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsString.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsInputValidate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsDate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUtil.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsMainScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsClientListScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsAddNewClientScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsDeleteClientScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUpdateClientScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsFindClientScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsTransactionsScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsDepositScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsWithdrawScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsTotalBalances.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsManageUsers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsListUsersScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="clsAddNewUserScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsDeleteUserScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUpdateUserScreen.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\UserLibrary</Filter>
     </ClInclude>
     <ClInclude Include="clsFindUserScreen.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\UserLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsLoginScreen.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsListUsersScreen.h">
+      <Filter>Header Files\UserLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="Global.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsManageUsers.h">
+      <Filter>Header Files\UserLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsShowLoginRegister.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsDeleteUserScreen.h">
+      <Filter>Header Files\UserLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsTransferScreen.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsAddNewClientScreen.h">
+      <Filter>Header Files\ClientLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsCurrency.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsBankClient.h">
+      <Filter>Header Files\ClientLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsCurrencyScreen.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsClientListScreen.h">
+      <Filter>Header Files\ClientLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsListCurrency.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsDeleteClientScreen.h">
+      <Filter>Header Files\ClientLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsFindCurrency.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsFindClientScreen.h">
+      <Filter>Header Files\ClientLibrary</Filter>
     </ClInclude>
-    <ClInclude Include="clsUpdateCurrencyRate.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="clsDepositScreen.h">
+      <Filter>Header Files\TranscationsLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsDate.h">
+      <Filter>Header Files\ExtraLibray</Filter>
     </ClInclude>
     <ClInclude Include="clsCurrencyCalculator.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\CurrencyLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsCurrency.h">
+      <Filter>Header Files\CurrencyLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsFindCurrency.h">
+      <Filter>Header Files\CurrencyLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsInputValidate.h">
+      <Filter>Header Files\ExtraLibray</Filter>
+    </ClInclude>
+    <ClInclude Include="clsListCurrency.h">
+      <Filter>Header Files\CurrencyLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsLoginScreen.h">
+      <Filter>Header Files\ScreensLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsMainScreen.h">
+      <Filter>Header Files\ScreensLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsScreen.h">
+      <Filter>Header Files\ScreensLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsPerson.h">
+      <Filter>Header Files\ExtraLibray</Filter>
+    </ClInclude>
+    <ClInclude Include="clsString.h">
+      <Filter>Header Files\ExtraLibray</Filter>
+    </ClInclude>
+    <ClInclude Include="clsTransferScreen.h">
+      <Filter>Header Files\TranscationsLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUpdateCurrencyRate.h">
+      <Filter>Header Files\CurrencyLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsTransactionsScreen.h">
+      <Filter>Header Files\ScreensLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUser.h">
+      <Filter>Header Files\UserLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUtil.h">
+      <Filter>Header Files\ExtraLibray</Filter>
+    </ClInclude>
+    <ClInclude Include="Global.h">
+      <Filter>Header Files\UserLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsWithdrawScreen.h">
+      <Filter>Header Files\TranscationsLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUpdateUserScreen.h">
+      <Filter>Header Files\UserLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUpdateClientScreen.h">
+      <Filter>Header Files\ClientLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsShowLoginRegister.h">
+      <Filter>Header Files\UserLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsCurrencyScreen.h">
+      <Filter>Header Files\ScreensLibrary</Filter>
+    </ClInclude>
+    <ClInclude Include="clsTotalBalances.h">
+      <Filter>Header Files\TranscationsLibrary</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
